# nexusllmllama

./: QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  USAGE_GUIDE.md  configure-github.sh  gradle.properties  settings.gradle.kts
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  publish.yml
app/: build.gradle.kts
app/src/androidTest/java/in/nishantapps/nexusllmllama/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  llama-jni.cpp  native-lib.cpp
app/src/main/cpp/bridge/: generation_worker.cpp  generation_worker.h  sampling.h
app/src/main/cpp/cmake/: FindVulkan.cmake
app/src/main/java/in/nishantapps/nexusllmllama/: MainActivity.kt
app/src/main/java/in/nishantapps/nexusllmllama/llama/: ChatWrapper.kt  LlamaGenerationChunk.kt  LlamaMessage.kt  LlamaReasoningParser.kt  LlamaRole.kt  LlamaRuntime.kt  LlamaSamplerParams.kt  LlamaSession.kt  NativeBridge.kt  PromptBuilder.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/in/nishantapps/nexusllmllama/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
